--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       --accent:#7fff00;       /* Neon‑Grün (CTAs) */
       --accent-2:#aec347;     /* Oliv‑Grün (Akzente) */
       --text:#e8f3ff;         /* helle Schrift */
-      --muted:#bfd0e6;        /* sekundärer Text */
+      --muted:#cfe0f2;        /* leicht aufgehellt für besseren Kontrast */
       --radius:18px;
       --shadow:0 12px 28px rgba(0,0,0,.35);
       --ring:0 0 0 3px rgba(127,255,0,.35);
@@ -26,12 +26,7 @@
     *{box-sizing:border-box}
     html,body{height:100%}
 
-    /*
-      Hintergrund‑Fix:
-      - Body bekommt eine SOLIDE Grundfarbe (var(--bg))
-      - Das visuelle Gradient‑Design liegt als FIXIERTES Overlay auf body::before,
-        damit es beim Scrollen nicht sichtbar „kachelt“ oder abrupte Cuts zeigt.
-    */
+    /* Hintergrund‑Fix via fixed Overlay */
     body{
       margin:0; font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, "Helvetica Neue", Arial;
       color:var(--text);
@@ -40,22 +35,18 @@
     }
     body::before{
       content:"";
-      position: fixed; /* bleibt viewport‑fixiert, kein Wiederanfang beim Scrollen */
-      inset: 0;
-      z-index: -1;
-      pointer-events: none;
+      position: fixed; inset: 0; z-index: -1; pointer-events: none;
       background:
         radial-gradient(1400px 1000px at 10% -10%, rgba(62,92,93,.35), transparent 60%),
         radial-gradient(1400px 1000px at 110% 0%, rgba(174,195,71,.20), transparent 60%),
         linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,0) 25%),
         var(--bg);
-      /* Performance‑Hinweis: fixed + will-change, damit weich scrollt */
       will-change: transform;
     }
 
     img{max-width:100%;display:block}
     a{color:inherit;text-decoration:none}
-    .container{width:100%;max-width:var(--maxw);margin:0 auto;padding:0 20px}
+    .container{width:100%;max-width:var(--maxw);margin:0 auto;padding:16px 20px 0px}
 
     .btn{display:inline-flex;align-items:center;gap:.6rem;border:none;border-radius:14px;padding:.9rem 1.2rem;font-weight:800;cursor:pointer;transition:.2s ease transform,.2s ease filter}
     .btn:focus-visible{outline:none;box-shadow:var(--ring)}
@@ -81,9 +72,9 @@
     .hero-card{border-radius:var(--radius);background:linear-gradient(180deg, rgba(174,195,71,.12), rgba(62,92,93,.10));border:1px solid rgba(255,255,255,.10);box-shadow:var(--shadow);padding:20px}
 
     section{padding:74px 0}
-    .section-head{display:flex;align-items:end;justify-content:space-between;gap:1rem;margin-bottom:28px}
+    .section-head{display:flex;align-items:center;justify-content:space-between;gap:1rem;margin-bottom:12px}
     .section-title{font-size:clamp(1.4rem,3vw,2rem);margin:0}
-    .section-sub{color:var(--muted);max-width:60ch}
+    .section-sub{color:#e6f1ff;max-width:60ch}
 
     .cards{display:grid;grid-template-columns:repeat(3,1fr);gap:22px}
     .card{background:linear-gradient(180deg, rgba(10,16,28,.85), rgba(10,16,28,.65));border:1px solid rgba(255,255,255,.08);border-radius:var(--radius);padding:22px;box-shadow:var(--shadow)}
@@ -118,6 +109,14 @@
     .success{display:none;background:linear-gradient(180deg, rgba(174,195,71,.16), rgba(127,255,0,.14));border:1px solid rgba(174,195,71,.45);border-radius:var(--radius);padding:14px;color:#f3ffe6;font-weight:800}
 
     footer{padding:40px 0;color:var(--muted);border-top:1px solid rgba(255,255,255,.08)}
+
+    /* === Mobile Tweaks === */
+    @media (max-width: 640px){
+      .hero{ padding:36px 0 40px }
+      .hero-cta{ justify-content:center }
+      .hero-cta .btn{ width:100%; max-width:420px; justify-content:center }
+      .section-head{ flex-direction:column; align-items:center; text-align:center }
+    }
 
     @media (max-width: 1024px){ .cards{grid-template-columns:1fr 1fr} }
     @media (max-width: 920px){
