increases h3 top margin

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     .steps{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
     .step{background:rgba(255,255,255,.05);border:1px solid rgba(255,255,255,.06);border-radius:var(--radius);padding:18px}
-    .step h3{margin:.2rem 0 .4rem;font-size:1.1rem}
+    .step h3{margin:.8rem 0 .2rem;font-size:1.1rem}
     .step p{color:var(--muted)}
     .step-num{width:32px;height:32px;border-radius:10px;display:grid;place-items:center;font-weight:900;background:linear-gradient(180deg, var(--accent), #62d500);color:#0b2000}
 
@@ -162,10 +162,10 @@
       </div>
       <aside class="hero-card" aria-label="Highlights">
         <ul>
-          <li>✔ Für Einsteiger:innen & Wiedereinsteiger</li>
-          <li>✔ Technik- & Laufstil-Coaching</li>
-          <li>✔ Planungs‑Check‑ins alle 2 Wochen</li>
-          <li>✔ Treffpunkte: Nordbahntrasse & Laufplatz Oberbergische Straße</li>
+          <li>Für Einsteiger:innen & Wiedereinsteiger</li>
+          <li>Technik- & Laufstil-Coaching</li>
+          <li>Planungs‑Check‑ins alle 2 Wochen</li>
+          <li>Treffpunkte: Nordbahntrasse & Laufplatz Oberbergische Straße</li>
         </ul>
         <!-- Hero‑Bild Platzhalter -->
         <div style="margin-top:12px;border-radius:14px;overflow:hidden;border:1px dashed rgba(255,255,255,.25);padding:18px;text-align:center;color:var(--muted)">Hero‑Bild Platzhalter (Foto später einsetzen)</div>
