--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     .btn-ghost:hover{border-color:var(--accent);color:#f5ffe6}
 
     header{position:sticky;top:0;z-index:40;backdrop-filter:saturate(160%) blur(8px);background:linear-gradient(180deg, rgba(13,22,41,.9) 0%, rgba(13,22,41,.4) 100%);border-bottom:1px solid rgba(255,255,255,.06)}
-    .nav{display:flex;align-items:center;justify-content:space-between;height:68px}
+    .nav{display:flex;align-items:center;justify-content:space-between;height:68px;max-width: var(--maxw);margin: 0 auto;}
     .brand{display:flex;align-items:center;gap:.7rem;font-weight:900;letter-spacing:.2px}
     .logo{width:38px;height:38px;border-radius:12px;background:conic-gradient(from 210deg, var(--accent), var(--accent-2));box-shadow:0 0 0 3px rgba(127,255,0,.18)}
     nav ul{display:flex;gap:1rem;list-style:none;padding:0;margin:0}
     nav a{padding:.5rem .75rem;border-radius:10px;color:var(--muted)}
     nav a:hover,nav a:focus-visible{background:rgba(255,255,255,.06);color:#fff}
 
-    .hero{position:relative;padding:84px 0 60px}
+    .hero{position:relative;padding:58px 0 32px}
     .hero-grid{display:grid;grid-template-columns:1.2fr 1fr;gap:40px;align-items:center}
     .eyebrow{color:var(--accent-2);text-transform:uppercase;letter-spacing:.14em;font-weight:800;font-size:.8rem}
     h1{font-size:clamp(2rem,5vw,3.4rem);line-height:1.1;margin:.4rem 0 1rem;font-weight:900}
@@ -71,8 +71,8 @@
     .hero-cta{margin-top:1.4rem;display:flex;gap:.8rem;flex-wrap:wrap}
     .hero-card{border-radius:var(--radius);background:linear-gradient(180deg, rgba(174,195,71,.12), rgba(62,92,93,.10));border:1px solid rgba(255,255,255,.10);box-shadow:var(--shadow);padding:20px}
 
-    section{padding:74px 0}
-    .section-head{display:flex;align-items:center;justify-content:space-between;gap:1rem;margin-bottom:12px}
+    section{padding:82px 0}
+    .section-head{display:flex;align-items:center;justify-content:space-between;margin-bottom:12px}
     .section-title{font-size:clamp(1.4rem,3vw,2rem);margin:0}
     .section-sub{color:#e6f1ff;max-width:60ch}
 
@@ -112,7 +112,7 @@
 
     /* === Mobile Tweaks === */
     @media (max-width: 640px){
-      .hero{ padding:36px 0 40px }
+      .hero{ padding:24px 0 16px }
       .hero-cta{ justify-content:center }
       .hero-cta .btn{ width:100%; max-width:420px; justify-content:center }
       .section-head{ flex-direction:column; align-items:center; text-align:center }
@@ -131,7 +131,7 @@
 </head>
 <body>
   <header>
-    <div class="container nav" role="navigation" aria-label="Hauptnavigation">
+    <div class="nav" role="navigation" aria-label="Hauptnavigation">
       <div class="brand">
         <!-- Logo‑Platzhalter: bitte Datei ersetzen -->
         <img class="logo" src="assets/logo-placeholder.svg" alt="First Miles Running Club Logo" />
